# language-c-uniplate

./: language-c-uniplate.cabal
Language/C/Syntax/: UniplateInstances.hs
